--- a/databases/semantic_search.ipynb
+++ b/databases/semantic_search.ipynb
@@ -48,19 +48,7 @@
    "metadata": {
     "height": 166
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'datasets'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdatasets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_dataset\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msentence_transformers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SentenceTransformer\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpinecone\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Pinecone, ServerlessSpec\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'datasets'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
     "from sentence_transformers import SentenceTransformer\n",
@@ -75,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8ab484bb-3bfb-4c52-a5bd-bcbe4a7a63d2",
    "metadata": {
     "height": 30
@@ -95,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ce859e4b-9b50-4f53-b357-28d3e3872c87",
    "metadata": {
     "height": 30
@@ -107,24 +95,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "356d4112-fa51-4092-9841-8b266e3b6a2c",
    "metadata": {
     "height": 30
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'questions': [{'id': [207550, 351729],\n",
+       "   'text': ['What is the truth of life?', \"What's the evil truth of life?\"]},\n",
+       "  {'id': [33183, 351730],\n",
+       "   'text': ['Which is the best smartphone under 20K in India?',\n",
+       "    'Which is the best smartphone with in 20k in India?']},\n",
+       "  {'id': [351731, 351732],\n",
+       "   'text': ['Steps taken by Canadian government to improve literacy rate?',\n",
+       "    'Can I send homemade herbal hair oil from India to US via postal or private courier services?']},\n",
+       "  {'id': [37799, 94186],\n",
+       "   'text': ['What is a good way to lose 30 pounds in 2 months?',\n",
+       "    'What can I do to lose 30 pounds in 2 months?']},\n",
+       "  {'id': [351733, 351734],\n",
+       "   'text': ['Which of the following most accurately describes the translation of the graph y = (x+3)^2 -2 to the graph of y = (x -2)^2 +2?',\n",
+       "    'How do you graph x + 2y = -2?']}],\n",
+       " 'is_duplicate': [False, True, False, True, False]}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dataset[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "2a07b143",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['What is the truth of life?', \"What's the evil truth of life?\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "record = dataset['questions'][0]\n",
+    "print(list(set(record['text'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "332d1241-61ae-4d09-bf46-52081c133c0c",
    "metadata": {
     "height": 132
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is the truth of life?\n",
+      "What's the evil truth of life?\n",
+      "Which is the best smartphone under 20K in India?\n",
+      "Which is the best smartphone with in 20k in India?\n",
+      "Steps taken by Canadian government to improve literacy rate?\n",
+      "Can I send homemade herbal hair oil from India to US via postal or private courier services?\n",
+      "What is a good way to lose 30 pounds in 2 months?\n",
+      "What can I do to lose 30 pounds in 2 months?\n",
+      "Which of the following most accurately describes the translation of the graph y = (x+3)^2 -2 to the graph of y = (x -2)^2 +2?\n",
+      "How do you graph x + 2y = -2?\n",
+      "--------------------------------------------------\n",
+      "Number of questions: 100000\n"
+     ]
+    }
+   ],
    "source": [
     "questions = []\n",
     "for record in dataset['questions']:\n",
@@ -149,12 +200,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5fb67759-ab38-4472-bfb0-4a56d1c05955",
    "metadata": {
     "height": 81
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorry no cuda.\n"
+     ]
+    }
+   ],
    "source": [
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "if device != 'cuda':\n",
@@ -164,12 +223,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d90ec5ec-5397-4ed5-8163-7a901b6ecb0c",
    "metadata": {
     "height": 64
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(384,)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "query = 'which city is the most populated in the world?'\n",
     "xq = model.encode(query)\n",
@@ -186,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "b3e3a94e-127f-4667-a9ae-7a17d7304ee6",
    "metadata": {
     "height": 43
@@ -199,27 +269,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "id": "ec1c84ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'67849698-b32a-42f1-b55d-fb4eb8091d3a'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PINECONE_API_KEY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "04cce0f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pinecone import ServerlessSpec, PodSpec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "17a75eca-60f0-478b-bdcf-b68732c1545d",
    "metadata": {
     "height": 200
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dl-ml-l5tifdu0t3blbkfjtqg8fo5dwfuxqwaoniaj\n"
+     ]
+    }
+   ],
    "source": [
     "pinecone = Pinecone(api_key=PINECONE_API_KEY)\n",
-    "INDEX_NAME = utils.create_dlai_index_name('dl-ai')\n",
+    "INDEX_NAME = utils.create_dlai_index_name('dl-ml')\n",
     "\n",
     "if INDEX_NAME in [index.name for index in pinecone.list_indexes()]:\n",
     "    pinecone.delete_index(INDEX_NAME)\n",
     "print(INDEX_NAME)\n",
-    "pinecone.create_index(name=INDEX_NAME, \n",
-    "    dimension=model.get_sentence_embedding_dimension(), \n",
-    "    metric='cosine',\n",
-    "    spec=ServerlessSpec(cloud='aws', region='us-west-2'))\n",
-    "\n",
-    "index = pinecone.Index(INDEX_NAME)\n",
-    "print(index)"
+    "# pinecone.create_index(name=INDEX_NAME, \n",
+    "#     dimension=model.get_sentence_embedding_dimension(), \n",
+    "#     metric='cosine',\n",
+    "#     spec=PodSpec(\n",
+    "#     environment=\"gcp-starter\",\n",
+    "#     pod_type=\"starter\"\n",
+    "#   ))\n",
+    "# index = pinecone.Index(INDEX_NAME)\n",
+    "# print(index)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef538028",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -231,12 +348,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "id": "574ed7f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pinecone import Pinecone\n",
+    "\n",
+    "pc = Pinecone(api_key=\"67849698-b32a-42f1-b55d-fb4eb8091d3a\")\n",
+    "index = pc.Index(\"dl-app\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "ea551303-aa81-41cd-adc5-dc9ea8072397",
    "metadata": {
     "height": 352
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [02:30<00:00,  3.01s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "batch_size=200\n",
     "vector_limit=10000\n",
@@ -262,12 +400,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "6153920a-f4c4-420e-9790-262dd2299fc6",
    "metadata": {
     "height": 30
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dimension': 384,\n",
+       " 'index_fullness': 0.1,\n",
+       " 'namespaces': {'': {'vector_count': 10000}},\n",
+       " 'total_vector_count': 10000}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "index.describe_index_stats()"
    ]
@@ -282,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "28b20b81-4782-4ce2-aec3-9576c7779f2e",
    "metadata": {
     "height": 115
@@ -299,35 +451,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "4c4244d6-7be0-4ee1-a36a-0d586f0555f7",
    "metadata": {
     "height": 30
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7: Where is the most beautiful city in the world?\n",
+      "0.69: What is the most beautiful city in the world?\n",
+      "0.64: Which city has the most museums per capita?\n",
+      "0.59: Which is the highest peak of the world?\n",
+      "0.58: Which country has the highest per capita income?\n",
+      "0.56: What percentage of the world's population lives in developing countries?\n",
+      "0.55: Which is the highest mountain in the world?\n",
+      "0.54: What is the most remote place in the world?\n",
+      "0.53: Why is Uttar Pradesh the most populous state in India?\n",
+      "0.49: Which are the most dangerous places on the earth to live? Why?\n"
+     ]
+    }
+   ],
    "source": [
     "run_query('which city has the highest population in the world?')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "f85b20fe-2328-47eb-84cd-bf3b27c6d4aa",
    "metadata": {
     "height": 47
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.79: How do you add chocolate chips to cake mix?\n",
+      "0.55: How do you make baking soda?\n",
+      "0.53: What is the red velvet cake frosting made of?\n",
+      "0.53: How do you make a perfume out of Skittles?\n",
+      "0.51: Where can I found adorable baked cupcakes in Gold Coast?\n",
+      "0.47: What is the recipe for a spinach artichoke dip from the Cheesecake Factory?\n",
+      "0.46: Where can I get custom decorated cakes for any occasion at Gold Coast?\n",
+      "0.45: How do I make chili?\n",
+      "0.44: What are all the different types of dessert?\n",
+      "0.43: Where can I get highest quality, tastiest cupcakes across the Gold Coast?\n"
+     ]
+    }
+   ],
    "source": [
     "query = 'how do i make chocolate cake?'\n",
     "run_query(query)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01a4d68f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "rag",
    "language": "python",
-   "name": "rag"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -339,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
