--- a/databases/semantic_search.ipynb
+++ b/databases/semantic_search.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "809aa032-d737-450d-aafa-e32bfba9d8f8",
    "metadata": {
     "height": 47
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "30698fb9-4709-4088-9905-9ccb4efd5e09",
    "metadata": {
     "height": 166
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "8ab484bb-3bfb-4c52-a5bd-bcbe4a7a63d2",
    "metadata": {
     "height": 30
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "ce859e4b-9b50-4f53-b357-28d3e3872c87",
    "metadata": {
     "height": 30
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "356d4112-fa51-4092-9841-8b266e3b6a2c",
    "metadata": {
     "height": 30
@@ -121,7 +121,7 @@
        " 'is_duplicate': [False, True, False, True, False]}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "2a07b143",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['What is the truth of life?', \"What's the evil truth of life?\"]\n"
+      "[\"What's the evil truth of life?\", 'What is the truth of life?']\n"
      ]
     }
    ],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "332d1241-61ae-4d09-bf46-52081c133c0c",
    "metadata": {
     "height": 132
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "5fb67759-ab38-4472-bfb0-4a56d1c05955",
    "metadata": {
     "height": 81
@@ -210,7 +210,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sorry no cuda.\n"
+      "Sorry no cuda.\n",
+      "'NoneType' object has no attribute 'cadam32bit_grad_fp32'\n",
+      "WARNING:tensorflow:From c:\\Users\\faizan\\anaconda3\\envs\\rag_chatbot\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
      ]
     }
    ],
@@ -223,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "d90ec5ec-5397-4ed5-8163-7a901b6ecb0c",
    "metadata": {
     "height": 64
@@ -235,7 +238,7 @@
        "(384,)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "b3e3a94e-127f-4667-a9ae-7a17d7304ee6",
    "metadata": {
     "height": 43
@@ -269,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "ec1c84ce",
    "metadata": {},
    "outputs": [
@@ -279,7 +282,7 @@
        "'67849698-b32a-42f1-b55d-fb4eb8091d3a'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "04cce0f2",
    "metadata": {},
    "outputs": [],
@@ -300,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "17a75eca-60f0-478b-bdcf-b68732c1545d",
    "metadata": {
     "height": 200
@@ -348,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "574ed7f5",
    "metadata": {},
    "outputs": [],
@@ -361,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "ea551303-aa81-41cd-adc5-dc9ea8072397",
    "metadata": {
     "height": 352
@@ -371,7 +374,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [02:30<00:00,  3.01s/it]\n"
+      "100%|██████████| 50/50 [04:18<00:00,  5.17s/it]\n"
      ]
     }
    ],
@@ -400,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "6153920a-f4c4-420e-9790-262dd2299fc6",
    "metadata": {
     "height": 30
@@ -415,7 +418,7 @@
        " 'total_vector_count': 10000}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "id": "28b20b81-4782-4ce2-aec3-9576c7779f2e",
    "metadata": {
     "height": 115
@@ -451,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "id": "4c4244d6-7be0-4ee1-a36a-0d586f0555f7",
    "metadata": {
     "height": 30
@@ -461,16 +464,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7: Where is the most beautiful city in the world?\n",
-      "0.69: What is the most beautiful city in the world?\n",
-      "0.64: Which city has the most museums per capita?\n",
+      "0.77: What country has the biggest population?\n",
+      "0.66: What is the greatest, most beautiful city in the world?\n",
       "0.59: Which is the highest peak of the world?\n",
-      "0.58: Which country has the highest per capita income?\n",
-      "0.56: What percentage of the world's population lives in developing countries?\n",
-      "0.55: Which is the highest mountain in the world?\n",
-      "0.54: What is the most remote place in the world?\n",
-      "0.53: Why is Uttar Pradesh the most populous state in India?\n",
-      "0.49: Which are the most dangerous places on the earth to live? Why?\n"
+      "0.55: What is the recent population of India?\n",
+      "0.55: Which country is the largest democracy in the world?\n",
+      "0.55: How many cities in china?\n",
+      "0.55: Where are the largest slums in the world?\n",
+      "0.53: What is the least known country in the world?\n",
+      "0.52: What is the biggest arena in the world?\n",
+      "0.49: Which cities/states in the U.S. are the most literate? Which are the least?\n"
      ]
     }
    ],
@@ -480,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "id": "f85b20fe-2328-47eb-84cd-bf3b27c6d4aa",
    "metadata": {
     "height": 47
@@ -490,16 +493,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.79: How do you add chocolate chips to cake mix?\n",
-      "0.55: How do you make baking soda?\n",
-      "0.53: What is the red velvet cake frosting made of?\n",
-      "0.53: How do you make a perfume out of Skittles?\n",
-      "0.51: Where can I found adorable baked cupcakes in Gold Coast?\n",
+      "0.55: How do you make homemade frosting without butter?\n",
+      "0.54: How do you make a crispy batter?\n",
+      "0.5: What does red velvet cake taste like?\n",
+      "0.48: Where can I get an unique taste for cupcakes in Gold Coast?\n",
+      "0.47: Where can I find delicious cupcakes at Gold Coast?\n",
       "0.47: What is the recipe for a spinach artichoke dip from the Cheesecake Factory?\n",
-      "0.46: Where can I get custom decorated cakes for any occasion at Gold Coast?\n",
-      "0.45: How do I make chili?\n",
-      "0.44: What are all the different types of dessert?\n",
-      "0.43: Where can I get highest quality, tastiest cupcakes across the Gold Coast?\n"
+      "0.45: What is the recipe for vattalappam?\n",
+      "0.43: How do you cook sweet potatoes in a microwave?\n",
+      "0.43: How should you store pancake batter?\n",
+      "0.42: How do you make a chili dog?\n"
      ]
     }
    ],
@@ -533,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
